# Unify

./: .gitignore  CNAME  README.md  docker-compose.yml  index.html
.github/workflows/: github-pages.yml  test-gh-pages.yml
assets/: index-Wh-XCPJH.css  index-iKYb5b53.js
backend/: .dockerignore  .envrc  Dockerfile  poetry.toml  pyproject.toml  venv-tree.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f56885a8d48_added_user_table.py  84027f3521a8_.py
backend/src/backend/: __init__.py  app.py  config.py
backend/src/backend/api/: __init__.py
backend/src/backend/auth/: __init__.py
backend/src/backend/models/: __init__.py  business.py  mixins.py  user.py
config/: nginx.conf
config/nginx/: nginx.conf
config/pg/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  style.css
frontend/src/components/: DashboardBottom.jsx  Footer.jsx  Hero.jsx  Layout.jsx  Navbar.jsx  Notfoundpage.jsx  PteranoDashboardBottom.jsx  RecommendedActions.jsx  Section.jsx
scripts/: gen-credentials.ps1  gen-credentials.sh  install-domains.ps1  install-domains.sh  uninstall-domains.sh
scripts/auth/: README.md  login.sh  signup.sh  test.sh
