[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
  { name = "Kiwifuit", email = "75169058+Kiwifuit@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "minio (>=7.2.20,<8.0.0)",
  "fastapi (>=0.136.3,<0.137.0)",
  "alembic (>=1.18.4,<2.0.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
]

[tool.poetry]
packages = [{ include = "backend", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["black (>=26.5.1,<27.0.0)"]
